--- a/ejection_seat/index.htm
+++ b/ejection_seat/index.htm
@@ -112,50 +112,47 @@ toward the stern (rear) or "blunt end of the boat".&nbsp;&nbsp;&nbsp;
 context of this story (during landing on the deck of the carrier), it is a
 request to raise the nose of the aircraft so the hook at the back of the
 aircraft is low enough to catch the arresting wire</font></p>
-<p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"boat"
-- any navy ship, the aircraft carrier is "THE Boat".&nbsp;</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"BN"
-  - aviator trained as bombardier and navigator</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"Boss"
-  - the Air Boss, he rules the flight deck</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"Bravo
-  Zulu" - praise for a good job.</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"chocks"&nbsp;
-  - wheel chocks holding the aircraft in place on the deck</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"emergency
+<p align="left"><font face="Arial" size="2">"boat"
+- any navy ship, the aircraft carrier is "THE Boat".&nbsp;</font></p>
+  <p align="left"><font face="Arial" size="2">"BN"
+  - aviator trained as bombardier and navigator</font></p>
+  <p align="left"><font face="Arial" size="2">"Boss"
+  - the Air Boss, he rules the flight deck</font></p>
+  <p align="left"><font face="Arial" size="2">"Bravo
+  Zulu" - praise for a good job.</font></p>
+  <p align="left"><font face="Arial" size="2">"chocks"&nbsp;
+  - wheel chocks holding the aircraft in place on the deck</font></p>
+  <p align="left"><font face="Arial" size="2">"emergency
   pull-forward" - the pilot declares an emergency situation exists that
-  requires a priority landing on the carrier as soon as possible</font></span></p>
-<p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"JO"
-- junior officer, usually with all the answers</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"hop"
-  - a mission or flight</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"NATOPS
+  requires a priority landing on the carrier as soon as possible</font></p>
+<p align="left"><font face="Arial" size="2">"JO"
+- junior officer, usually with all the answers</font></p>
+  <p align="left"><font face="Arial" size="2">"hop"
+  - a mission or flight</font></p>
+  <p align="left"><font face="Arial" size="2">"NATOPS
   - The Naval Air Training and Operating Procedures Standardization program,
   responsible for rules and regulations governing safe and correct operation of
   all naval aircraft, (sometimes used in jest to mean "Not Applicable to
-  Our Present Situation").</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"Paddles"
-  - Landing Signals Officer - aids pilots in landing aboard a carrier</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"steady
-  up" - straighten the ship (stop turning)&nbsp;</font></span></p>
-  <p align="left"><span style="BACKGROUND-COLOR: #ffffff; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="2">"trap"
-  - an arrested landing on the carrier</font></span></p>
+  Our Present Situation").</font></p>
+  <p align="left"><font face="Arial" size="2">"Paddles"
+  - Landing Signals Officer - aids pilots in landing aboard a carrier</font></p>
+  <p align="left"><font face="Arial" size="2">"steady
+  up" - straighten the ship (stop turning)&nbsp;</font></p>
+  <p align="left"><font face="Arial" size="2">"trap"
+  - an arrested landing on the carrier</font></p>
 </blockquote>
 <p align="left"><a href="http://www.tailhook.org/AVSLANG.htm"><font face="Arial" size="2">More
 Naval Aviator Slang / Jargon</font></a></p>
       <p align="left">&nbsp;</p>
-      <p align="left"><span style="mso-fareast-font-family: MS Mincho; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font face="Arial" size="5">Lieutenant
-      Mark Baden's (pilot) Account of the Incident</font></span></p>
-<p align="left"><span style="FONT-SIZE:
- 12pt; mso-bidi-font-size: 10.0pt" 
-           ><font face="Arial" size="3">As we finished the brief,
-my BN (bombardier navigator - Lt. Keith Gallagher) told me that it was his birthday and that our recovery would be his 100<sup>th</sup>
+      <p align="left"><font face="Arial" size="5">Lieutenant
+      Mark Baden's (pilot) Account of the Incident</font></p>
+<p align="left"><font face="Arial" size="3">As we finished the brief,
+my BN (bombardier navigator - Lt. Keith Gallagher) told me that it was his birthday and that our recovery would be his 100th
 trap on the boat. To top it off, we were assigned the plane with my name on the
-side.</font></span></p>
-<p align="left"><font face="Arial"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
-           ><font size="3">As
+side.</font></p>
+<p align="left"><font face="Arial"><font size="3">As
 we taxied out of the chocks, I was still feeling a little uneasy about all the
-recent mishaps. </font> </span><font size="3"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
+recent mishaps. </font><font size="3"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
            > To make myself feel better, I went through the "soft
 shot/engine failure on takeoff" EPs (emergency procedures), touching each
 switch or lever as I went through the steps.<o:p></o:p></span></font></font></p>
@@ -433,7 +430,7 @@ wondered how many times we would have to porpoise the nose of the plane before
 the valve opened. As he moved the stick forward, I felt the familiar sensation
 of negative "G", and then something strange happened: my head touched
 the canopy. For a brief moment I thought that I had failed to tighten my lap
-belts, but I knew that wasnít true. Before I could complete that thought,
+belts, but I knew that wasn√≠t true. Before I could complete that thought,
 there was a loud bang, followed by wind, noise, disorientation and more wind,
 wind, wind. Confusion reigned in my mind as I was forced back against my seat,
 head against the headrest, arms out behind me, the wind roaring in my head,
