--- a/ejection_seat/index.htm
+++ b/ejection_seat/index.htm
@@ -87,7 +87,7 @@ Indian Ocean, July 1991</p>
       <p align="left"><font face="Arial"><font size="3">This
       is a true story about&nbsp; my cousin - Keith Gallagher surviving a very
       unusual and life threatening incident while serving as bombardier navigator on a A-6
-      aircraft off the <a href="http://www.navy.mil/local/story_archive.asp?id=96"> USS Abraham Lincoln</a>
+      aircraft off the USS Abraham Lincoln
       in the Indian Ocean on July 9,
       1991.&nbsp; Keith would recover from this accident, return to flight
       status, and complete his service in the Navy.&nbsp; Keith
@@ -95,13 +95,13 @@ Indian Ocean, July 1991</p>
       his wife Michelle and their two children.&nbsp; <a href="mailto:keith@gallagher.com"><br>
       </a></font><font size="2"><b>Mark
       Gallagher</b></font></font></p>
-<p align="left"><font face="Arial"><b><font size="3"><span style="BACKGROUND-COLOR: #ffff66; mso-bidi-font-size: 10.0pt">Editor's
-Note:</span></font></b> <font size="3"><span style="BACKGROUND-COLOR: #ffff66; mso-bidi-font-size: 10.0pt"> The aircraft in this story is a Green Lizard KA-6D
+<p align="left"><font face="Arial"><b><font size="3">Editor's
+Note:</font></b> <font size="3"> The aircraft in this story is a Green Lizard KA-6D
 aerial tanker and this was a aerial refueling mission
 overhead the carrier. On July 9, 1991 the USS Abraham Lincoln is four days out of Singapore heading
-northwest for patrol duty in the Persian Gulf.&nbsp;</span></font></font></p>
-<p align="left"><span style="BACKGROUND-COLOR: #ffffcc; mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><font size="3"><b>N<span>avy
-jargon</span></b> <span> used here:</span></font></span></p>
+northwest for patrol duty in the Persian Gulf.&nbsp;</span></font></p>
+<p align="left"><font size="3"><b>Navy
+jargon</b> used here:</font></p>
 <blockquote>
 <p align="left"><font face="Arial" size="2">"abeam"
 - a direction 90 degrees (perpendicular) to the side of the ship.</font></p>
@@ -141,8 +141,6 @@ aircraft is low enough to catch the arresting wire</font></p>
   <p align="left"><font face="Arial" size="2">"trap"
   - an arrested landing on the carrier</font></p>
 </blockquote>
-<p align="left"><a href="http://www.tailhook.org/AVSLANG.htm"><font face="Arial" size="2">More
-Naval Aviator Slang / Jargon</font></a></p>
       <p align="left">&nbsp;</p>
       <p align="left"><font face="Arial" size="5">Lieutenant
       Mark Baden's (pilot) Account of the Incident</font></p>
@@ -152,32 +150,26 @@ trap on the boat. To top it off, we were assigned the plane with my name on the
 side.</font></p>
 <p align="left"><font face="Arial"><font size="3">As
 we taxied out of the chocks, I was still feeling a little uneasy about all the
-recent mishaps. </font><font size="3"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
-           > To make myself feel better, I went through the "soft
+recent mishaps. </font><font size="3"> To make myself feel better, I went through the "soft
 shot/engine failure on takeoff" EPs (emergency procedures), touching each
-switch or lever as I went through the steps.<o:p></o:p></span></font></font></p>
-<p align="left"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
-           ><font face="Arial" size="3">"At
-least if something happens right off the bat, I'll be ready," I thought.<o:p></o:p></font></span></p>
-<p align="left"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
-           ><font face="Arial" size="3">The
+switch or lever as I went through the steps.</p>
+<p align="left"><font face="Arial" size="3">"At
+least if something happens right off the bat, I'll be ready," I thought.</font></p>
+<p align="left"><font face="Arial" size="3">The
 first few minutes of the hop were busy. Concentrating on the package-check and
 consolidation, as well as trying to keep track of my initial customers,
-dispelled my uneasiness.</font></span></p>
-      <p align="left"><font face="Arial"><b><font size="3"><span style="BACKGROUND-COLOR: #ffff66"><span style="BACKGROUND-COLOR: #ffff66; mso-bidi-font-size: 10.0pt">Editor's
-Note: </span>
-</span> </font> </b> <span style="BACKGROUND-COLOR: #ffff66"><span style="BACKGROUND-COLOR: #ffff66; mso-bidi-font-size: 10.0pt"> <font size="3"> The&nbsp; <span style="mso-bidi-font-size: 10.0pt; mso-fareast-font-family: Times New Roman; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">KA-6D
-is a tanker version of the A-6 Intruder.&nbsp; </span></font></span><font size="3">A
+dispelled my uneasiness.</font></p>
+      <p align="left"><font face="Arial"><b><font size="3">Editor's
+Note:
+</font> </b> <font size="3"> The KA-6D
+is a tanker version of the A-6 Intruder. A
 total of 90 KA-6Ds were produced by Grumman for the Navy by modifying existing Intruder airframes. To make
 the conversion, certain radar and bombing equipment is removed and replaced with
 an internal hose-and-reel refueling package, with the drogue fairing protruding
 from underneath the rear fuselage. The KA-6D retained a visual bombing
 capability (which was seldom exercised). The A-6 had a long and outstanding
-record of reliable service for the Navy from 1963 to 1997.</font></span></font></p>
-<p align="left"><a href="http://aeroweb.brooklyn.cuny.edu/specs/grumman/ka-6d.htm">Facts
-about the A-6 (KA-6D tanker)</a></p>
-<p align="left"><span style="FONT-SIZE: 12pt; mso-bidi-font-size: 10.0pt" 
-           ><font face="Arial" size="3">As
+record of reliable service for the Navy from 1963 to 1997.</font></p>
+<p align="left"><font face="Arial" size="3">As
 we approached mid-cycle, that most boring time in a tanker hop, we kept
 ourselves occupied with fuel checks. We were keeping a close eye on one drop
 tank that had quit transferring with about 1,000 pounds of fuel still inside. I
